overflow x fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ html, body {
     font-size: 10px;
     font-family: 'Roboto', sans-serif;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body { 
